# autofns

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
src/autofns/: __init__.py
